@@ -13,6 +13,7 @@ Upcoming Version
 [TASK]    Replace be.container viewhelper
 [TASK]    Refactor fetching the number of records in the index
 [TASK]    Add language to groupBy in trending search phrases widget to avoid MySQL error
+[BUGFIX]  Apply rawurlencode only to file title. Thanks to Muhammad Zohaib. https://github.com/tpwd/ke_search/issues/146
 
 Version 4.6.3, 3 February 2023
 [!!!]     If you use the RouteEnhancer you will need to set one character default values for list and select filters. see Documentation/Configuration/RoutingSpeakingUrls.rst or https://github.com/tpwd/ke_search/commit/add3cb93c0c570f65b27bdb6edf28aa3bdbae5f6#diff-4df14275bdd91be559ccf5c988e352bd5f89da95790065d9015f1a32e60ca97f
